test/lattests/extensions/objects1/bad/undefinedBase.lat
class a extends b {

}

int main(){return 0;}